# agentsmd-lint

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_linter_and_cli.py  test_parser.py  test_rules.py
