[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsmd-lint"
version = "0.1.0"
description = "A linter and scaffolder for AGENTS.md files. Optimise your agent instructions for signal density."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["agents.md", "agentsmd", "linter", "coding-agents", "ai", "aaif", "mcp", "llm"]
authors = [{ name = "shriramkv" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/shriramkv/agentsmd-lint"
Issues = "https://github.com/shriramkv/agentsmd-lint/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.4"]

[project.scripts]
agentsmd-lint = "agentsmd_lint.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsmd_lint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.agentsmd-lint]
max_words = 1500
min_command_sections = 1
